--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -48,18 +48,18 @@
           </div>
         </div>
         <div class="thread-btn flex">
-          <% if message.messageable_type == "Channel" %>
-            <%= link_to channel_message_threads_path(message.messageable_id, message.id) do %>
-              <i class="far fa-comment-dots"></i>
-            <% end %>
-          <% else %>
-            <%= link_to directmsg_message_threads_path(message.messageable_id, message.id) do %>
-              <i class="far fa-comment-dots"></i>
-            <% end %>
-          <% end %>
-          <div class="thread-count pl-2">
+          
+          <div class="thread-count pl-2 text-blue-600">
             <% if message.children.count > 0 %>
-              有 <%= message.children.count %> 則回覆
+              <% if message.messageable_type == "Channel" %>
+                <%= link_to channel_message_threads_path(message.messageable_id, message.id), class: " border-solid border-2 border-blue-600 rounded-md px-1 -ml-2" do %>
+                  有 <%= message.children.count %> 則回覆
+                <% end %>
+              <% else %>
+                <%= link_to directmsg_message_threads_path(message.messageable_id, message.id), class: " border-solid border-2 border-blue-600 rounded-md px-1" do %>
+                  有 <%= message.children.count %> 則回覆
+                <% end %>
+              <% end %>
             <% end %>
           </div>
         </div>
@@ -67,6 +67,17 @@
     </div>
     <div class="react-bar">
       <button class="emoji-trigger btn-blue btn" data-action="click-> emoji#click" data-id=<%= message.id %>><i class="far fa-laugh-wink"></i></button>
+      <button class="btn-blue btn">
+        <% if message.messageable_type == "Channel" %>
+          <%= link_to channel_message_threads_path(message.messageable_id, message.id) do %>
+            <i class="far fa-comment-dots"></i>
+          <% end %>
+        <% else %>
+          <%= link_to directmsg_message_threads_path(message.messageable_id, message.id) do %>
+            <i class="far fa-comment-dots"></i>
+          <% end %>
+        <% end %>
+      </button>
       <% if controller_name != "directmsgs"%>
         <button class= "share-btn btn btn-blue" data-id="<%= message.id %>"><i class="far fa-share-square"></i></button>
       <% end %>
