--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -7,7 +7,7 @@
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
       <div class="box-border border-b border-gray-400 h-16 font-bold flex flex-col justify-center pl-3">
-        Drafts
+        <%= t('.title') %>
         <p class="count-draft text-xs text-gray-500"></p>
       </div>
       <%# 訊息區 %>
@@ -28,13 +28,13 @@
   <div class="box relative">
     <a href="#" class="block bg-white rounded-lg my-5 mx-5 p-3 shadow-sm border hover:shadow-md">
       <div class="flex justify-between mb-2">
-        <p class="font-bold">#channelID</p>
+        <p class="font-bold"></p>
         <div>
-          <span class="text-xs text-gray-500">time</span>
-          <span class="text-xs text-light_pink font-bold">Drafts</span>
+          <span class="text-xs text-gray-500"></span>
+          <span class="text-xs text-light_pink font-bold"><%= t('.draft') %></span>
         </div>   
       </div>
-      <p class="content text-sm">drafts</p>      
+      <p class="content text-sm"></p>      
     </a>
     <div class="draft-des-group absolute top-15 right-3 bg-white rounded-lg border-2 z-10 shadow-sm
     hidden">
