--- a/app/views/shared/_shareform.html.erb
+++ b/app/views/shared/_shareform.html.erb
@@ -2,20 +2,20 @@
   <%= form_with model: @message, url: add_messages_path(locale: 'zh-TW'), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto" do |f|%>
     <div class="flex flex-wrap mb-6">
       <div class="w-full flex share-title justify-between">
-        <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
+        <p class="text-2xl font-bold mt-3 ml-1"><%= t('.share') %></p>
         <div class="cancel-img mt-4 mr-2">
           <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2 cancel") %>
         </div>
       </div>
       <div class="w-full px-3 mt-4">
-        <%= f.label :messageable_id, "Share with", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
+        <%= f.label :messageable_id, t('.to') , class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
         <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }) %>
       </div>
     </div>
     <div class="flex flex-wrap mb-6">
       <div class="w-full px-3">
-          <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-          <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
+          <%= f.label :content, t('.message'), class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
+          <%= f.text_area :content,placeholder: t('.placeholder'), size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
       </div>
     </div>
     <%= f.hidden_field :share_message_id, value: '', id: 'share_message_id' %>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="flex flex-row-reverse mb-4 mr-2">
-      <%= f.submit "share", class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
+      <%= f.submit t('utilities.share'), class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
     </div>
   <% end %> 
 </div>
