add ckeditor for thread

--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -2,7 +2,7 @@
 <div class="info right_info hidden w-1/4 min-w-200 border-l border-gray-400">
   <% if @thread %>
     <div class="box-border border-b border-gray-400 h-16">
-      <button class="info-cancel">X</button>
+      <button class="info-cancel ml-auto">X</button>
       <h1>Thread</h1>
       <p>
         <% if @thread.messageable_type == "Channel" %>
