--- a/app/views/threads/_message_broadcast.html.erb
+++ b/app/views/threads/_message_broadcast.html.erb
@@ -1,17 +1,20 @@
 <div class="messages_child pl-5">
   <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2">
-    <div class="txt flex">
-      <div class="author font-bold mr-2">
-        <%= message.user.nickname %>
+    <div class="txt flex relative pl-12">
+      <div class="w-10 h-10 absolute left-0">
+        <%= image_tag message.user.profile.try(:avatar_url,(:small)) || 
+          "https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32",class:"min-w-full h-frounded message_avatar rounded","aria-haspopup": true,"aria-expanded": true,data:{id:message.user_id} %>
       </div>
-      <div class="share-msg flex-col">
-        <div class="createtime mr-2">
+      <div class="font-medium items-start">
+        <span class="pr-1 author"><%= message.user.nickname %></span>
+        <span class="createtime text-xs text-gray-700">
           <%= message.created_at.strftime("%I:%M") %>
-        </div>
+        </span>
         <div class="content">
           <%= raw(message.content) %>
         </div>
       </div>
+      
     </div>
   </div>
 </div>
