--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -7,17 +7,17 @@
 <% end%>
 <div class="messages_child">
   <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2 pl-2" data-controller="emoji" data-emoji-id =<%= message.id %>>
-    <div class="txt flex relative pl-12">
+    <div class="txt flex relative pl-12 w-full">
       <div class="w-10 h-10 absolute left-0">
         <%= image_tag message.user.profile.try(:avatar_url,(:small)) || 
           "https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32",class:"min-w-full h-frounded message_avatar rounded","aria-haspopup": true,"aria-expanded": true,data:{id:message.user_id} %>
       </div>
-      <div class="font-bold items-start">
+      <div class="font-bold items-start w-full mr-3">
         <span class="pr-1 author"><%= message.user.nickname %></span>
         <span class="createtime text-xs text-gray-700">
           <%= message.created_at.strftime("%I:%M") %>
         </span>
-        <div class="share-msg flex-col">
+        <div class="flex-col share-msg">
           <div class="content text-sm text-gray-800"><%= raw(message.content) %>
           </div>
           <div class="file">
