--- a/app/javascript/stylesheets/Frontend/upload.scss
+++ b/app/javascript/stylesheets/Frontend/upload.scss
@@ -1,4 +1,46 @@
+.btn-ds {
+  @apply font-bold py-2 px-2 rounded;
+}
+
+.btn-white {
+  @apply bg-white text-black;
+}
+
+.files-area .upload-share{
+  display: none;
+}
+
+.files-area:hover .upload-share{
+  display: block;
+}
+
+.msg-file-area .msg-img-dl {
+  display: none;
+}
+
+.msg-file-area:hover .msg-img-dl {
+  display: block;
+}
+
 .file-zone {
   width: 250px;
   height: 250px;
+}
+
+.upload-share {
+  right: 3%;
+  top: 5%;
+}
+
+.msg-img-dl {
+  right: 3%;
+  top: 5%;
+}
+
+.other-file {
+  color: blue; 
+}
+
+.other-file:hover {
+  border-bottom: 1px solid black;
 }
