--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -20,11 +20,18 @@
         <div class="flex-col share-msg">
           <div class="content text-sm text-gray-800"><%= raw(message.content) %>
           </div>
-          <div class="file">
+          <div class="file flex">
             <% if message.attachfiles.empty? != true %>
               <% message.attachfiles.each do |file|%>
-                <%= image_tag file.document(:small).url if file.document.mime_type.include? "image" %>
-                <%= link_to file.document.metadata["filename"], file.document.download_url(host: "http://localhost:3000/"), download:"" unless file.document.mime_type.include? "image"%>
+                <div class="msg-file-area relative">
+                  <% if file.document.mime_type.include? "image" %>
+                    <%= image_tag file.document(:small).url, class: "block" %>
+                    <a href="<%= file.document.download_url(host: "https://staging.sladock.tw/") %>" download= "" class="btn-ds btn-white absolute msg-img-dl">
+                      <i class="fas fa-cloud-download-alt"></i>
+                    </a>    
+                  <% end %>
+                  <%= link_to file.document.metadata["filename"], file.document.download_url(host: "https://staging.sladock.tw/"), download:"", class: "inline-block other-file" unless file.document.mime_type.include? "image"%>
+                </div>
               <% end %>
             <% end %>
         </div>
@@ -47,7 +54,7 @@
     <div class="react-bar">
       <button class="emoji-trigger btn-blue btn" data-action="click-> emoji#click" data-id=<%= message.id %>><i class="far fa-laugh-wink"></i></button>
       <% if controller_name != "directmsgs"%>
-      <button class= "share-btn btn btn-blue" data-id="<%= message.id %>"><i class="far fa-share-square"></i></button>
+        <button class= "share-btn btn btn-blue" data-id="<%= message.id %>"><i class="far fa-share-square"></i></button>
       <% end %>
     </div>
   </div>
