--- a/app/views/shared/_msgform.html.erb
+++ b/app/views/shared/_msgform.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @message, url:channel_messages_path(@channel) ,class:"flex bg-gray-200 border-2 border-gray-200 rounded text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500", id:"new_message",data:{action: "ajax:success->subscribe#clearmsg", target: "subscribe.newMessage",cid: @channel.id,name:@channel.name,wid: @workspace.id}) do |f| %>
   <%= f.text_field :content, class:"min-w-0 flex-grow message-content hidden", placeholder: t(".placeholder"),autocomplete: "off" %> 
   <%= f.fields_for :attachfiles do |file| %>
-    <%= file.file_field :document, class:"file-upload hidden" %>
+    <%= file.file_field :document, class:"hidden file-upload" %>
   <% end %>
   <div class="centered">
     <textarea class="editor" placeholder="輸入訊息"></textarea>
