--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -10,20 +10,20 @@
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
       <div class="box-border border-b border-gray-400 h-16 font-bold flex justify-between items-center">
         <h3><%= t('.title') %></h3>
-        <button data-action="click->uploadfile#newFormShowUp"><%= t('.upload') %></button>
+        <button class="btn-ds btn-white border mr-3" data-action="click->uploadfile#newFormShowUp"><%= t('.upload') %></button>
       </div>
       <%# 檔案區 %>
       <div class="file_area break-all flex flex-wrap overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300 pl-5 pt-5" workspace_id="<%= @workspace.id %>">
         <% @files.each do |file| %>
           <div class="file-zone border-gray-600 border-solid border mx-1 rounded">
-            <div class="flex flex-wrap mx-auto justify-center overflow-hidden h-48 rounded relative">
+            <div class="flex flex-wrap mx-auto justify-center overflow-hidden h-48 rounded relative files-area">
               <%= image_tag file.document.url, class: "" if file.document.mime_type.include? "image" %>
               <%= image_pack_tag "media/images/PDF_file_icon.png" if file.document.mime_type.include? "pdf" %>
-              <div class="absolute right-0">
-                <a href="<%= file.document.download_url(host: "https://staging.sladock.tw/") %>" download= "">
+              <div class="absolute upload-share">
+                <a href="<%= file.document.download_url(host: "https://staging.sladock.tw/") %>" download= "" class= "btn-ds btn-white">
                   <i class="fas fa-cloud-download-alt"></i>
                 </a>
-                <a href="" data-action="click->uploadfile#shareFormShowUp" file_id="<%= file.id %>" >
+                <a href="" data-action="click->uploadfile#shareFormShowUp" file_id="<%= file.id %>" class= "btn-ds btn-white" >
                   <i class="fas fa-share"></i>
                 </a>
               </div>
