--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -26,7 +26,7 @@
                 <div class="msg-file-area relative">
                   <% if file.document.mime_type.include? "image" %>
                     <%= image_tag file.document(:small).url, class: "block" %>
-                    <a href="<%= file.document.download_url(host: "https://staging.sladock.tw/") %>" download= "" class="btn-ds btn-white absolute msg-img-dl">
+                    <a href="<%= file.document.download_url(host: "https://staging.sladock.tw/") %>" download= "" class="btn-d btn-white absolute msg-img-dl">
                       <i class="fas fa-cloud-download-alt"></i>
                     </a>    
                   <% end %>
