--- a/app/views/channels/_new.html.erb
+++ b/app/views/channels/_new.html.erb
@@ -1,5 +1,5 @@
 <div class="create-ch-bg absolute w-full h-full top-0 bg-black bg-opacity-25 flex hidden justify-center items-center">
-  <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
+  <div class=" create-ch-area px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
     <div class="flex justify-between items-center mb-5">
       <h5 class="font-bold text-2xl"><%= t(".create") %></h5>
       <button class="create-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
@@ -15,9 +15,12 @@
       <%= f.text_field :description,placeholder:t(".desc_placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
       <span class="text-xs text-gray-600"><%= t(".about") %></span>
     </div>
-    <select name="channels[name][]" id="ws_user" multiple="true" style="width: 100%">
-      <%#= options_for_select() %>
-    </select>
+    <%# 邀請表單 %>
+    <div>
+      <p class="font-bold"><%= t('.invite') %></p>
+      <select name="channels[name][]" id="ws_user" multiple="true" style="width: 100%">
+      </select>
+    </div>
       <%= f.submit t("utilities.submit"),class:"cursor-pointer block font-bold text-gray-700 px-5 py-2 mt-3 ml-auto bg-gray-400 rounded focus:outline-none" %>
     <% end %>
   </div>
