can tag someone in the workspace

--- a/app/javascript/stylesheets/Frontend/ckeditor.css
+++ b/app/javascript/stylesheets/Frontend/ckeditor.css
@@ -35,3 +35,12 @@ pre > code {
 .share-msg {
   position: relative;
 }
+
+.mention__item {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+}
+.mention__item__user-name {
+  font-weight: bold;
+}
