adjust css and fix bug

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -20,7 +20,7 @@
     <%= render './shared/invite_ch' %>
   <% end %>
 </div>
-<%= render './channels/new', channel: @new_channel %>
+<%= render './channels/new', channel: @new_channel, workspace: @workspace %>
 <%= render './profiles/edit.html.erb' %>
 
 <%# 草考插入區塊 %>
