--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -50,4 +50,4 @@
 
 </div>	
 
-<%= render './channels/new', channel: @new_channel %>
+<%= render './channels/new', channel: @new_channel, workspace: @workspace %>
