--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -4,7 +4,7 @@
                                   unread_msg_bol: @unread_msg_bol,
                                   unread_msg_count: @unread_msg_count,
                                   channel: @channel || @directmsg %>
-  <div class="flex flex-col flex-grow min-w-0 min-h-0 h-small_screen">
+  <div class="flex flex-col flex-grow min-w-0 min-h-0 h-screen">
     <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
     <div class="box-border border-b border-gray-400 h-16 flex justify-between items-center current-channel-or-directmsg" channel_id="<%= @channel.try(:id) || 0 %>" directmsg_anther_user_id="<%= User.find_by(nickname: @directmsg_user_name).try(:id) || 0 %>">
       <p class="font-bold">#<%=  @channel.try(:name) || @directmsg_user_name %></p>
@@ -68,8 +68,6 @@
 
 <% if @thread %>
   <script>
-    console.log("right_info open")
-
     // 打開右側
     const rightInfo = document.querySelector(".right_info")
     rightInfo.classList.toggle("hidden")
