--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -48,6 +48,14 @@
         <%= render "./shared/invite_ws" %>
         <%= render './shared/language' %>
       </div>
+      <div class="w-full">
+        <p class="font-medium truncate pl-5 text-lg py-2 mt-2 border-t border-border_b">
+          App
+        </p>
+        <p class="truncate pl-10 py-1 hover:bg-sladock flex pr-5">
+          <%= link_to "GitHub", webhooks_path, class: "d-block mr-auto" %>
+        </p>
+      </div>
     </div>
   </div> 
 </div> 
