--- a/app/views/webhooks/index.html.erb
+++ b/app/views/webhooks/index.html.erb
@@ -1,9 +1,9 @@
-<h2 class="text-2xl text-center mb-5">Webhooks</h2>
+<h2 class="text-2xl text-center mb-5 mt-5">Webhooks</h2>
 
 <div class="container mx-auto max-w-xl">
   <div class="flex mb-5">
-    <div class="mr-auto">
-      <%= link_to 'Add Webhook', new_webhook_path, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded" %>
+    <div class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded">
+      <%= link_to 'Add Webhook', new_webhook_path, class: "" %>
     </div>
   </div>
 
@@ -17,7 +17,7 @@
     <% end %>
   </ul>
 
-  <div>
-    <%= link_to "Back to workspace", workspace_channel_path(@back), class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+  <div class="text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+    <%= link_to "Back to workspace", workspace_channel_path(@back), class: "" %>
   </div>
 </div>
