--- a/app/views/webhooks/edit.html.erb
+++ b/app/views/webhooks/edit.html.erb
@@ -1,8 +1,7 @@
-<h2 class="text-2xl text-center">Edit webhook</h2>
+<div class="container mx-auto max-w-xl">
+  <h2 class="text-2xl text-gray-700 font-bold text-center my-5 border-b-2">Edit webhook</h2>
+</div>
 
   <%= render 'error', webhook: @webhook %>
   <%= render 'form', webhook: @webhook, url: webhook_path(@webhook), user_channels: @user_channels %>
   
-<div class="mt-4 text-center">
-  <%= link_to "Back to index", webhooks_path, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
-</div>
