--- a/app/views/webhooks/index.html.erb
+++ b/app/views/webhooks/index.html.erb
@@ -1,18 +1,24 @@
-<h2 class="text-2xl text-center mb-5 mt-5">Webhooks</h2>
 
 <div class="container mx-auto max-w-xl">
+  <h2 class="text-2xl text-gray-700 font-bold text-center my-5 border-b-2">Webhooks</h2>
   <div class="flex mb-5">
-    <div class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded">
-      <%= link_to 'Add Webhook', new_webhook_path, class: "" %>
+    <div class="ml-auto bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded-full h-8 w-8 flex items-center justify-center">
+      <%= link_to '+', new_webhook_path, class: "text-xl" %>
     </div>
   </div>
 
   <ul class="mb-5">
     <% @webhooks.each do |webhook| %>
-    <li class="mb-2">
-      <%= webhook.webhook_name %>
-      <%= link_to 'edit', edit_webhook_path(webhook), class: "text-blue-700 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
-      <%= link_to 'delete', webhook_path(webhook), method: 'delete', data: {confirm: "Are you sure?"}, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+    <li class="mb-5 flex border-b-2 py-3">
+      <div class="text-gray-700 font-bold">
+        <%= webhook.webhook_name %>
+      </div>
+      <div class="ml-auto">
+        <%= link_to 'edit', edit_webhook_path(webhook), class: "text-blue-700 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded" %>
+      </div>
+      <div class="ml-2">
+        <%= link_to 'delete', webhook_path(webhook), method: 'delete', data: {confirm: "Are you sure? This can not be undone."}, class: "bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded" %>
+      </div>
     </li>
     <% end %>
   </ul>
