--- a/app/views/webhooks/new.html.erb
+++ b/app/views/webhooks/new.html.erb
@@ -1,8 +1,5 @@
-<h2 class="text-2xl text-center">Add new webhook</h2>
+<h2 class="text-2xl text-gray-700 font-bold text-center my-5">Add New Webhook</h2>
 
   <%= render 'error', webhook: @webhook %>
   <%= render 'form', webhook: @webhook, user_channels: @user_channels %>
-  
-<div class="mt-4 text-center">
-  <%= link_to "Back to index", webhooks_path, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
-</div>
+
