--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -1,8 +1,8 @@
 <% if !@divide_exist && @last_enter_at && (@last_enter_at < message.created_at) && message.user_id != current_user.id %>
   <% @divide_exist = true %>
   <div class='flex text-right divide'>
-    <span class='h-0 border-b-0 border-t-2 block flex-grow border-red-600 my-auto'></span>
-    <span class="pl-3">new</span>
+    <span class='pl-2 h-0 border-b-0 border-t-2 block flex-grow border-red-600 my-auto'></span>
+    <span class="pl-3 pr-3">new</span>
   </div>
 <% end%>
 <div class="messages_child" data-target="subscribe.msglist" message_id="<%= message.id %>">
