--- a/app/javascript/stylesheets/Frontend/ckeditor.css
+++ b/app/javascript/stylesheets/Frontend/ckeditor.css
@@ -40,3 +40,21 @@ pre > code {
   display: flex;
   justify-content: space-between;
 }
+.ck.ck-editor__main>.ck-editor__editable {
+  background-color: transparent !important;
+}
+
+.ck.ck-editor__main>.ck-editor__editable:not(.ck-focused) {
+  border-color: transparent !important;
+}
+
+.ck.ck-toolbar {
+  background-color: transparent !important;
+  border: 0px !important;
+  border-top : 1px solid var(--ck-color-toolbar-border) !important;
+}
+
+.ck.ck-editor__editable:not(.ck-editor__nested-editable).ck-focused {
+  border: 0px !important;
+  box-shadow: none !important;
+}
