--- a/app/views/webhooks/index.html.erb
+++ b/app/views/webhooks/index.html.erb
@@ -2,8 +2,10 @@
 <div class="container mx-auto max-w-xl">
   <h2 class="text-2xl text-gray-700 font-bold text-center my-5 border-b-2">Webhooks</h2>
   <div class="flex mb-5">
-    <div class="ml-auto bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded-full h-8 w-8 flex items-center justify-center">
-      <%= link_to '+', new_webhook_path, class: "text-xl" %>
+    <div class="ml-auto bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white hover:border-transparent hover:rounded-full w-8 h-8 flex items-center self-center">
+      <%= link_to new_webhook_path, class: "mx-auto text-2xl text-center" do %>
+        <i class="fas fa-plus-circle"></i>
+      <% end %>
     </div>
   </div>
 
@@ -23,7 +25,5 @@
     <% end %>
   </ul>
 
-  <div class="text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
-    <%= link_to "Back to workspace", workspace_channel_path(@back), class: "" %>
-  </div>
+  <%= link_to "Back to workspace", workspace_channel_path(@back), class: "block text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
 </div>
