--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -16,7 +16,7 @@
         <i class="far fa-times-circle fa-lg"></i>
       </button>
     </div>
-    <div class="thread-all-msg overflow-y-auto">
+    <div class="thread-all-msg">
       <%= render 'threads/message_broadcast', message: @thread %>
       <p id="thread-count" data-target="subscribe.threadcount" message_id="<%= @thread.id %>" channel_id="<%= @channel.try(:id) %>" directmsg_id="<%= @directmsg.try(:id) %>" class="flex items-center pl-2 text-gray-600">
         有 <%= @thread.children.count %> 則回覆
