--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -57,7 +57,9 @@
   </div>    
   <%= render './shared/shareform' %>
   <%= render './shared/right_info' %>
+  <% if @channel %>
     <%= render './shared/invite_ch' %>
+  <% end %>
 </div>
 <%= render './channels/new', channel: @new_channel, workspace: @workspace %>
 <%= render './profiles/edit.html.erb' %>
