rebase conflict resolve

--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -65,6 +65,7 @@
           <%= render './shared/language' %>
         </p>
       </div>
+      <%= render './shared/language' %>
     </div>
   </div> 
 </div> 
