Resize button border & add button hover effect

--- a/app/views/webhooks/_form.html.erb
+++ b/app/views/webhooks/_form.html.erb
@@ -32,8 +32,8 @@
     </div>
 
     <div class="flex">
-      <%= form.submit class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded" %>
-      <%= link_to "Cancel", webhooks_path, class: "ml-auto bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded" %>
+      <%= form.submit class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border-2 border-blue-500 hover:border-transparent rounded" %>
+      <%= link_to "Cancel", webhooks_path, class: "ml-auto bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-1 px-2 border-2 border-red-500 hover:border-transparent rounded" %>
     </div>
   <% end %>
 </div>
