--- a/app/views/webhooks/index.html.erb
+++ b/app/views/webhooks/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container mx-auto max-w-xl">
   <h2 class="text-2xl text-gray-700 font-bold text-center my-5 border-b-2">Webhooks</h2>
   <div class="flex mb-5">
-    <div class="ml-auto bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white hover:border-transparent hover:rounded-full w-8 h-8 flex items-center self-center">
+    <div class="ml-auto bg-transparent hover:bg-blue-500 text-blue-500 hover:text-white hover:border-transparent hover:rounded-full flex items-center w-7 h-7 self-center">
       <%= link_to new_webhook_path, class: "mx-auto text-2xl text-center" do %>
         <i class="fas fa-plus-circle"></i>
       <% end %>
@@ -16,14 +16,14 @@
         <%= webhook.webhook_name %>
       </div>
       <div class="ml-auto">
-        <%= link_to 'edit', edit_webhook_path(webhook), class: "text-blue-700 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded" %>
+        <%= link_to 'edit', edit_webhook_path(webhook), class: "text-blue-700 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border-2 border-blue-500 hover:border-transparent rounded" %>
       </div>
       <div class="ml-2">
-        <%= link_to 'delete', webhook_path(webhook), method: 'delete', data: {confirm: "Are you sure? This can not be undone."}, class: "bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded" %>
+        <%= link_to 'delete', webhook_path(webhook), method: 'delete', data: {confirm: "Are you sure? This can not be undone."}, class: "bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-1 px-2 border-2 border-red-500 hover:border-transparent rounded" %>
       </div>
     </li>
     <% end %>
   </ul>
 
-  <%= link_to "Back to workspace", workspace_channel_path(@back), class: "block text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+  <%= link_to "Back to workspace", workspace_channel_path(@back), class: "block text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border-2 border-blue-500 hover:border-transparent rounded" %>
 </div>
