Polishing channels show view, language and leftbar view

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -7,12 +7,12 @@
   <div class="flex flex-col flex-grow min-w-0 min-h-0 h-screen">
     <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
     <div class="box-border border-b border-gray-400 h-16 flex justify-between items-center current-channel-or-directmsg" channel_id="<%= @channel.try(:id) || 0 %>" directmsg_anther_user_id="<%= User.find_by(nickname: @directmsg_user_name).try(:id) || 0 %>">
-      <p class="font-bold">#<%=  @channel.try(:name) || @directmsg_user_name %></p>
+      <p class="ml-2 font-bold"># <%=  @channel.try(:name) || @directmsg_user_name %></p>
         <%# button %>  
       <div class="btn-group flex">
         <% if @channel %>
-          <button class="invite-ch-btn h-8 w-8 rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none text-lg">
-            <i class="fas fa-user-plus text-gray-600" ></i>
+          <button class="invite-ch-btn h-8 w-8 rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none text-2xl mr-2 flex items-center justify-center self-center">
+            <i class="fas fa-user-plus text-gray-600"></i>
           </button>
         <% end %>
         <div class="profile pr-2 col-span-1 ml-auto">
