--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,16 +1,16 @@
 <div class="leftbar hidden md:block">
   <div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center pl-5">
-    <h3 class="chatroomName text-white font-bold text-xl pt-4 current-worksapce" workspace_id="<%= @workspace.id %>"">
+    <h3 class="chatroomName text-white font-bold text-xl current-worksapce" workspace_id="<%= @workspace.id %>"">
       <%= workspace.name %>
     </h3>
   </div>
-  <div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full pt-4 " style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>" data-notification-channel="<%= channel&.id || "" %>">
+  <div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>" data-notification-channel="<%= channel&.id || "" %>">
     <div class="left-bar">
-      <%= link_to workspace_draft_path(@workspace),class:"truncate pl-10 py-1 w-full block hover:bg-deep_sladock block hidden draft-btn align-middle" do %>
+      <%= link_to workspace_draft_path(@workspace),class:"truncate pl-10 pt-2 pb-1 w-full block hover:bg-deep_sladock block hidden draft-btn align-middle" do %>
         <i class="fas fa-pen-square mr-2"></i>
         <%= t(".sidebar.drafts") %>
       <% end %>
-      <%= link_to workspace_uploadedfiles_path(workspace),class:"truncate pl-10 py-1 w-full block bg-sladock border-b border-border_b hover:bg-deep_sladock" do %>
+      <%= link_to workspace_uploadedfiles_path(workspace),class:"truncate pl-10 pt-1 pb-2 w-full block bg-sladock border-b border-border_b hover:bg-deep_sladock" do %>
         <i class="fas fa-file-download mr-2"></i>
         <%= t(".sidebar.save") %>
       <% end %>
@@ -57,8 +57,10 @@
           <% end %>
         </p>
       </div>
-      <div>
-        <%= render './shared/language' %>
+      <div class="w-full">
+        <p class="font-medium truncate pl-5 text-lg py-2 mt-2 border-t border-border_b">
+          <%= render './shared/language' %>
+        </p>
       </div>
     </div>
   </div> 
