--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -1,7 +1,7 @@
 <%# 右方資訊區 %>
 <div class="info right_info hidden w-1/4 min-w-200 border-l border-gray-400">
   <% if @thread %>
-    <div class="box-border border-b border-gray-400 h-16 flex justify-between items-center">
+    <div class="box-border border-b border-gray-400 h-16 thread-header">
       <div class="thread-title ml-2">
         <h1><strong>Thread</strong></h1>
         <p class="text-gray-500 text-xs">
@@ -16,7 +16,7 @@
         <i class="far fa-times-circle fa-lg"></i>
       </button>
     </div>
-    <div class="thread-all-msg">
+    <div class="thread-all-msg thread-msg">
       <%= render 'threads/message_broadcast', message: @thread %>
       <p id="thread-count" data-target="subscribe.threadcount" message_id="<%= @thread.id %>" channel_id="<%= @channel.try(:id) %>" directmsg_id="<%= @directmsg.try(:id) %>" class="flex items-center pl-2 text-gray-600">
         有 <%= @thread.children.count %> 則回覆
