--- a/app/views/threads/_threadform.html.erb
+++ b/app/views/threads/_threadform.html.erb
@@ -1,7 +1,7 @@
-<%= form_with(model: @message, url:channel_message_threads_path(@thread.messageable_id, @thread), id:"new_thread", class: "flex rounded text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 thread-form", data:{action: "ajax:success->subscribe#clearThreadMsg"}) do |f| %>
+<%= form_with(model: @thread_message, url:channel_message_threads_path(@thread.messageable_id, @thread), id:"new_thread", class: "flex rounded text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 thread-form", data:{action: "ajax:success->subscribe#clearThreadMsg"}) do |f| %>
   <%= f.text_field :content, class:"min-w-0 flex-grow thread-content hidden", placeholder: t(".placeholder"),autocomplete: "off" %> 
   <%= f.fields_for :attachfiles do |file| %>
-    <%= file.file_field :document, class:"hidden tfile-upload" %>
+    <%= file.file_field :document, class:"tfile-upload" %>
   <% end %>
   <div class="centered">
     <textarea class="thread-editor" placeholder="輸入訊息"></textarea>
