Polishing margin bottom of language section in leftbar

--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -53,14 +53,14 @@
         <p class="font-medium truncate pl-5 text-lg py-2 mt-2 border-t border-border_b">
           App
         </p>
-        <p class="truncate pl-10 py-1 hover:bg-sladock flex pr-5 text-lg">
+        <p class="truncate pl-10 py-1 hover:bg-sladock flex pr-5 mb-2 text-lg">
           <%= link_to webhooks_path do %>
             <i class="fab fa-github"></i><span class="ml-1">GitHub</span>
           <% end %>
         </p>
       </div>
       <div class="w-full">
-        <p class="font-medium truncate pl-5 text-lg py-2 mt-2 border-t border-border_b">
+        <p class="font-medium truncate pl-5 text-lg py-2 border-t border-border_b">
           <%= render './shared/language' %>
         </p>
       </div>
