--- a/app/javascript/stylesheets/Frontend/ckeditor.css
+++ b/app/javascript/stylesheets/Frontend/ckeditor.css
@@ -58,3 +58,12 @@ pre > code {
   border: 0px !important;
   box-shadow: none !important;
 }
+
+.text-area {
+  border-color: black !important;
+}
+
+
+.thread-text-area {
+  border-color: black !important;
+}
