can tag someone in the thread

--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -16,7 +16,7 @@
       <div class="file_area break-all flex flex-wrap overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300 pl-5 pt-5" workspace_id="<%= @workspace.id %>">
         <% @files.each do |file| %>
           <div class="file-zone border-gray-600 border-solid border mx-1 rounded">
-            <div class="flex flex-wrap mx-auto justify-center overflow-hidden h-48 rounded relative files-area">
+            <div class="flex flex-wrap mx-auto justify-center overflow-hidden h-48 rounded relative files-area" file_name="<%= file.document.metadata["filename"] %>">
               <%= image_tag file.document.url, class: "image-pre" if file.document.mime_type.include? "image" %>
               <%= image_pack_tag "media/images/PDF_file_icon.png", class: "pdf-pre" if file.document.mime_type.include? "pdf" %>
               <% unless (file.document.mime_type.include? "image") || (file.document.mime_type.include? "pdf") %>
