--- a/app/views/shared/_sharefileform.html.erb
+++ b/app/views/shared/_sharefileform.html.erb
@@ -25,6 +25,7 @@
       <%= f.fields_for :attachfiles do |file| %>
         <%= file.file_field :document %>
       <% end %>
+      <div id="share-file-zone"></div>
       <div class="flex flex-row-reverse mb-4 mr-2">
         <%= f.submit t('.upload'), class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
       </div>
