--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -13,7 +13,7 @@
   display: block;
 }
 
-.select2-container .select2-selection--single .select2-selection__rendered{
+select{
   width: 300px;
 }
 
